tests/ui/extern_type_lifetime.stderr
error: extern type with lifetimes is not supported yet
 --> $DIR/extern_type_lifetime.rs:4:22
  |
4 |         type Complex<'a, 'b>;
  |                      ^^
